test_regress/t/t_alias_hier_ref_bad.out
%Error: t/t_alias_hier_ref_bad.v:24:19: Hierarchical reference used for net alias
                                      : ... note: In instance 't'
   24 |   alias a = sub_i.btw;
      |                   ^~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
